Bug 1892363 - When looking for font prefs based on a lang tag, try comparing the base lang alone if the whole tag doesn't match.  a=RyanVM

Original Revision: https://phabricator.services.mozilla.com/D208588

Differential Revision: https://phabricator.services.mozilla.com/D208666